[package]
name = "hltas-editor-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hltas-cleaner = { git = "https://github.com/Eddio0141/hltas-cleaner/", branch = "master" }
eframe = "0.15.0"
hltas = { git = "https://github.com/HLTAS/hltas" }
native-dialog = "0.5.5"
serde = { version = "1", features = ["derive"], optional = true }
fluent-templates = "0.6.1"
locale_config = "0.3.0"
unic-langid-impl = "0.9.0"
tinystr = "0.4.11"

[features]
default = ["persistence"]
persistence = ["eframe/persistence", "serde"]