[package]
name = "hltas-editor-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hltas-cleaner = { git = "https://github.com/Eddio0141/hltas-cleaner/", branch = "master" }
hltas = { git = "https://github.com/HLTAS/hltas", branch = "master" }
native-dialog = "0.5.5"
fluent-templates = "0.6.1"
locale_config = "0.3.0"
unic-langid-impl = "0.9.0"
tinystr = "0.4.11"
imgui = "0.8.0"
clipboard = "0.5"
glium = "0.30.2"
image = "0.23"
imgui-glium-renderer = "0.8.0"
imgui-winit-support = "0.8.0"
winit = "0.25.0"
