[package]
name = "hltas-editor-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hltas_cleaner = "2.0.0"
hltas = "0.5.0"
native-dialog = "0.6.1"
fluent-templates = "0.6.1"
locale_config = "0.3.0"
unic-langid-impl = "0.9.0"
imgui = "0.8.2"
clipboard = "0.5"
glium = "0.30.2"
image = "0.23"
imgui-glium-renderer = "0.8.0"
imgui-winit-support = "0.8.0"
winit = "0.26.0"
home = "0.5.3"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0"
